--- a/100天打卡记录.md
+++ b/100天打卡记录.md
@@ -36,11 +36,29 @@ java基础知识总结，24道基础题。
 
 ##### 第三天：2021年12月23日
 
-*   [ ] set源码，hashMap1.7 1.8源码
-*   [ ] Java8新特征
+*   [x] map，hashMap 1.8源码，set源码，（hashmap1.7,1.8小区别，set依赖map进行实现）
+*   [x] Java8新特征(Lambda 表达式，重复注解，函数式编程)（没太能理解，先了解）
 *   [ ] 有剩余时间再将集合这一部分做一个总结
-*   [ ] 算法题1. 三数之和，四数之和
-*   [ ] 算法题2. 电话号码的字母组合
+*   [x] 算法题1. 三数之和，四数之和（双指针）
+*   [x] 算法题2. 电话号码的字母组合（简单回溯）
 
-*   [ ] 算法题3. 删除链表的倒数第 N 个结点
+*   [x] 算法题3. 删除链表的倒数第 N 个结点（一次遍历找倒数k的节点）
 
+##### 第四天：2021年12月24日（程序员没有平安夜，只有八股文）
+
+*   [x] 将剩下的集合（WeakHashMap,Queue,Iterator）了解一下（LinkedHashMap源码需要再琢磨琢磨）
+*   [x] 对Java集合面试题做一个整理，结束这一部分 (集合这部分的面试比较集中，基本都是HashMap,List,再加上一些并发容器ConcurrentHashMap等，其他问的很少，主要是其他的源码也很简单)
+*   [x] 算法题20.有效的括号（栈）
+*   [x] 算法题21. 合并两个有序链表（链表比较合并）
+
+*   [x] 算法题22. 括号生成（简单回溯）
+
+##### 第五天：2021年12月25日
+
+开始数据库部分，先看Mysql45讲
+
+*   [ ] 45讲前8讲
+*   [ ] 算法题23.合并K个升序链表
+*   [ ] 算法题31. 下一个排列
+
+*   [ ] 算法题32. 最长有效括号
