--- a/算法/刷题记录/2021-03-11__两数之和__三数之和__最接近的三数之和_四数之和（双指针）.md
+++ b/算法/刷题记录/2021-03-11__两数之和__三数之和__最接近的三数之和_四数之和（双指针）.md
@@ -70,26 +70,30 @@ class Solution {
         List<List<Integer>> res = new ArrayList<>();
         Arrays.sort(nums);
         for(int i = 0;i<nums.length;i++){
-            if(i>0&&nums[i]==nums[i-1]){
-                continue;
+            if(i>0&&nums[i]==nums[i-1]){//i需要去重
+                continue;//需要continue 而不是break
             }
             int p = i+1;
-            int q = nums.length-1;
+            int q= nums.length-1;
             while(p<q){
-                if(-nums[i] == nums[p]+nums[q]){
+                if(nums[i]+nums[p]+nums[q]==0){
                     List<Integer> list= new ArrayList<>();
                     list.add(nums[i]);
                     list.add(nums[p]);
                     list.add(nums[q]);
                     res.add(new ArrayList<>(list));
-                    while(p<q&&nums[p]==nums[p+1]){p++;}
-                    while(p<q&&nums[q]==nums[q-1]){q--;}
+                    while(p<q&&nums[q]==nums[q-1]){//p需要去重
+                        q--;
+                    }
+                    while(p<q&&nums[p]==nums[p+1]){//需要去重
+                        p++;
+                    }
                     p++;
                     q--;
-                }else if(-nums[i] > nums[p]+nums[q]){
-                    p++;
+                }else if(nums[i]+nums[p]+nums[q]>0){
+                    q--;
                 }else{
-                    q--;
+                    p++;
                 }
             }
         }
