--- a/100天打卡记录.md
+++ b/100天打卡记录.md
@@ -57,8 +57,164 @@ java基础知识总结，24道基础题。
 
 开始数据库部分，先看Mysql45讲
 
-*   [ ] 45讲前8讲
-*   [ ] 算法题23.合并K个升序链表
-*   [ ] 算法题31. 下一个排列
+*   [x] 45讲第一讲(介绍mysql整体架构及**一条sql查询语句执行过程**)
+*   [x] 45讲第二讲(一条**更新语句的执行流程**，redo，binlog，两阶段提交)
+*   [x] 45讲第三讲(事务不同隔离级别以及具体实现，事务启动方式)
+*   [x] 45讲第四讲(索引实现方式，主键索引和二级索引及索引选择)
+*   [x] 学习二分查找左右边界的判定方法（labuladong的博客，写的还不错）
+*   [x] 算法题23.合并K个升序链表（优先队列，分治）
+*   [x] 算法题31. 下一个排列（特殊方法）
+*   [x] 算法题32. 最长有效括号（栈，动归）
 
-*   [ ] 算法题32. 最长有效括号
+##### 第六天：2021年12月26日
+
+*   [x] 45讲第五讲(覆盖索引，最左前缀原则，索引下推)
+*   [x] 45讲第六讲(全局锁,表级锁(分为表锁和元数据锁)，MDL读写锁)
+*   [x] 45讲第七讲(行锁，两阶段锁协议，死锁检测，预防死锁方案)
+*   [x] 45讲第八讲(可重复读下，Mysql事务隔离性的实现及其原理)
+*   [x] 学习前缀和（labuladong的算法笔记，leetcode303,304题）
+*   [x] 算法题33. 搜索旋转排序数组（二分法找有序）
+*   [x] 算法题34. 在排序数组中查找元素的第一个和最后一个位置（二分法找边界）
+*   [x] 算法题39.组合总和(回溯法+剪枝)
+*   [x] 算法题560.和为 K 的子数组（前缀和及优化）
+
+##### 第七天：2021年12月27日
+
+*   [x] 45讲第九讲(唯一索引，普通索引(可以使用Changebuffer),与redolog区别)
+
+*   [x] 45讲第十讲(mysql优化器选择索引，force index，explain)
+
+*   [x] 45讲第十一讲(加字符串的四种方法(完整，前缀，倒排，hash))
+
+*   [x] 45讲第十二讲(mysql突然变慢：1.redolog满2.内存不足3.刷脏页)
+
+*   [x] 学习查分数组（labuladong的算法笔记，leetcode1094题）
+
+*   [x] LRU缓存实现，及LinkedHashMap源码
+
+*   [x] 算法题42. 接雨水
+
+*   [x] 算法题46. 全排列
+
+*   [x] 算法题48.旋转图像
+
+
+##### 第八天：2021年12月28日
+
+出去玩，躺平一天。
+
+##### 第九天：2021年12月29日
+
+*   [x] 45讲第十三讲(mysql数据删除，数据空洞，重建表的几种方式)
+*   [x] 45讲第十四讲(count(*)实现方式和优化方式,count函数的效率比较)
+*   [x] 45讲第十五讲(redolog,binlog使用两阶段提交设计理念)
+*   [x] 45讲第十六讲(order by全字段排序排序，rowid排序，覆盖索引优化排序)
+*   [x] 算法题49.字母异位词分组 
+*   [x] 算法题53.最大子数组和
+*   [x] 算法题55.跳跃游戏
+
+##### 第十天：2021年12月30日
+
+*   [x] 45讲第十七讲(优先队列排序(不需要全部排序),两个高效的随机排序算法)
+*   [x] 45讲第十八讲(导致索引失效的操作:**条件字段函数操作**,**隐式类型转换**,字符集不同)
+*   [x] 45讲第十九讲(堵塞查询语句的情况，sql语句查询慢的情况)
+*   [x] 45讲第二十讲(幻读,引入间隙锁,可能会死锁,幻读解决方法(RC隔离级别+binlog_format=row))
+*   [x] 做了几道链表题，并总结链表题的技巧
+*   [x] 算法题56.合并区间
+*   [x] 算法题986.区间列表的交集（区间问题几道题明天全部做完）
+
+##### 第十一天：2021年12月31日
+
+开始二刷《Redis设计与实现》
+
+*   [x] 45讲第21讲(Mysql加锁规则(间隙锁和 next-key lock))(没太看懂)
+*   [x] 45讲第22讲(提高性能的一些紧急手段)
+*   [x] 45讲第23讲(**组提交**来提高性能，redolog,binlog的写入机制)
+*   [x] 45讲第24讲(binlog的几种格式（statement，row，mixed）及使用场景)
+*   [x] 1-5章Redis数据结构实现（**字符串SDS**,链表,字典,**跳表**）
+*   [x] 算法题1288.删除被覆盖区间
+*   [x] 算法题435.无重叠区间
+
+##### 第十二天：2022年1月1日
+
+>   二刷Mysql45讲，二刷《Redis设计与实现》
+
+*   [x] 45讲第25讲(主备延迟,主备切换时可靠性和可用性策略)
+*   [x] 45讲第26讲(防止备库延迟过久，介绍了多版本的并行复制方案)
+*   [x] 6-8章Redis数据结构与对象
+*   [x] 算法题496. 下一个更大元素
+*   [x] 算法题503.下一个更大元素II
+*   [x] 算法题556.下一个更大元素III
+
+##### 第十三天：2022年1月2日
+
+>   二刷Mysql45讲，二刷《Redis设计与实现》中
+>
+>   今日感想:45讲讲的太好了，而且非常深入，读完内心久久不能平静。一定得把这块知识啃下来
+
+*   [x] 45讲第27讲(主备切换方案:**基于位点，基于GTID**)(没看太懂)
+*   [x] 45讲第28讲(主备延迟导致读写分离场景数据不一致解决方案)
+*   [x] 9-10章数据库和持久化
+*   [x] 算法题76,567,3.滑动窗口系列题目
+*   [x] 算法题200,1254,695.岛屿问题系列题目
+
+##### 第十四天：2022年1月3日
+
+>   二刷Mysql45讲，二刷《Redis设计与实现》中
+
+*   [x] 45讲第29讲(三个判断mysql主库是否出问题的方案)
+*   [x] 45讲第31讲(数据误删后恢复方法(Flashback ,全量备份+增量日志))
+*   [x] 45讲第32讲(执行kill命令后,线程会做什么,kill会遇到什么问题)
+*   [x] 45讲第33讲(mysql查询是怎么发送给客户端(边算边发))
+*   [x] 45讲第34讲(使用join时的两种方式及其性能)
+*   [x] 算法题：手撕堆排序，快速排序和归并排序
+
+##### 第十六天：2022年1月5日
+
+>   二刷Mysql45讲，二刷《Redis设计与实现》中
+
+*   [x] 45讲第35讲(MRR优化,BKA算法)
+*   [x] 45讲第36讲(临时表的用法和特性)
+*   [x] 45讲第37讲(什么时候系统会使用临时表)
+*   [x] 45讲第38讲(Memory引擎使用场景，Memory引擎的优劣)
+*   [x] 算法题94：二叉树的中序遍历（三种遍历方式）
+
+#####  第十七天：2022年1月6日
+
+>   三刷Mysql45讲，二刷《Redis设计与实现》中
+
+*   [x] 三刷《Mysql45讲》1,2,3讲，总结
+*   [x] Redis设计与实现10-11章节（RDB和AOF持久化）
+
+#####  第十八天：2022年1月7日
+
+>   三刷Mysql45讲，二刷《Redis设计与实现》中
+
+*   [x] 整理之前做过的算法题目
+*   [x] 学习二叉树之类题目做法
+*   [x] 整理mysql 日志,事务笔记
+
+#####  第二十二天：2022年1月12日
+
+三刷《网络是怎么连接的》，二刷《Redis的设计与实现》
+
+*   [x] 算法题26,82,83,283,143,226,116,117
+*   [x] 网络是怎样连接的第二章
+*   [x] TCP流量控制，拥塞控制策略
+
+#####  第二十三天：2022年1月13日
+
+三刷《网络是怎么连接的》，二刷《Redis的设计与实现》
+
+*   [x] 算法题114,654,106,107,297,236,235
+*   [x] 网络是怎样连接的第三章
+*   [x] 趣谈答疑篇
+
+##### 第二十四天：2022年1月14日
+
+三刷《网络是怎么连接的》，二刷《Redis的设计与实现》
+
+*   [x] 算法题72,63,343,198.214.337,
+* [x] 网络是怎样连接的第三章
+
+  
