--- a/并发&多线程/并发面试题.md
+++ b/并发&多线程/并发面试题.md
@@ -2,7 +2,7 @@
 
 
 
-![image-20210719214514067](./assets/并发体系图.png)
+![image-20210719214514067](A:\汪\下载文件\javaKI-main\javaKI-main\并发&多线程\assets\并发体系图.png)
 
 并发基础
 --------
@@ -15,7 +15,7 @@
 
 3. <u>（回答优缺点）</u>进程的引入提高了CPU的利用率，但是由于进程之间切换代价过大，所以频繁的进程切换会浪费CPU利用率；线程的引入提高了进程的并发度可以有效的利用多处理器和多核计算机，但是但同属于某个进程下的线程不可预知的原因导致死掉就会导致整个进程奔溃。
 
-   ![jvm](assets/jvm.png)
+   ![jvm](A:\汪\下载文件\javaKI-main\javaKI-main\并发&多线程\assets\jvm.png)
 
    从JVM角度来说，一个进程中可以有多个线程，多个线程共享进程的**堆**和**方法区 (JDK1.8 之后的元空间)\**资源，但是每个线程有自己的\**程序计数器**、**虚拟机栈** 和 **本地方法栈**。
 
@@ -25,8 +25,6 @@
 
 * **并行：** 单位时间内，多个任务同时执行。
 
-  
-
 #### 使用多线程可能带来的问题
 
 内存泄漏、死锁、线程不安全等等
@@ -35,7 +33,7 @@
 
 java线程的生命周期有：NEW,RUNNABLE,BLOCKED,WAITING,TIME_WAITING,TERMINATED
 
-![java线程生命周期](assets/java线程生命周期.png)
+![java线程生命周期](A:\汪\下载文件\javaKI-main\javaKI-main\并发&多线程\assets\java线程生命周期.png)
 
 操作系统线程的生命周期：**初始状态**（NEW)，**可运行状态**（READY），**运行状态**（RUNNING)，等待状态（WAITING)（该状态在 Java中被划分为了 **BLOCKED**，**WAITING**，**TIMED_WAITING** 三种状态），终止状态 （TERMINATED）
 
@@ -52,8 +50,6 @@ java线程的生命周期有：NEW,RUNNABLE,BLOCKED,WAITING,TIME_WAITING,TERMINA
 
 线程创建与启动，停止
 --------------------
-
-#### 1. 用那种方式创建线程最好
 
 #### 1. 用那种方式创建线程最好
 
@@ -547,7 +543,7 @@ ReentrantLock+Condition+parties+count
 
    通过 JDK 自带的 `javap` 命令查看 `SynchronizedDemo` 类的相关字节码信息：首先切换到类的对应目录执行 `javac SynchronizedDemo.java` 命令生成编译后的 .class 文件，然后执行`javap -c -s -v -l SynchronizedDemo.class`。
 
-   ![字节码](assets/字节码.png)
+   ![字节码](A:\汪\下载文件\javaKI-main\javaKI-main\并发&多线程\assets\字节码.png)
 
 从上面我们可以看出：
 
@@ -575,7 +571,7 @@ public class SynchronizedDemo {
 
 
 
-![字节码](assets/字节码-1633350907452.png)
+![字节码](A:\汪\下载文件\javaKI-main\javaKI-main\并发&多线程\assets\字节码-1633350907452.png)
 
 `synchronized` 修饰的方法并没有 `monitorenter` 指令和 `monitorexit` 指令，取得代之的确实是 `ACC_SYNCHRONIZED` 标识，该标识指明了该方法是一个同步方法。JVM 通过该 `ACC_SYNCHRONIZED` 访问标志来辨别一个方法是否声明为同步方法，从而执行相应的同步调用。
 
@@ -661,5 +657,5 @@ Unsafe篇
 
 ##### Java线程池核心参数与工作流程，拒绝策略
 
-
+的房贷是否松动
 
