--- a/算法/刷题记录/2021-03-14__二叉树的最大深度__反转链表__反转链表II(快慢指针).md
+++ b/算法/刷题记录/2021-03-14__二叉树的最大深度__反转链表__反转链表II(快慢指针).md
@@ -50,15 +50,15 @@ class Solution {
 ```java
 class Solution {
     public ListNode reverseList(ListNode head) {
-        ListNode pre ;
-        pre = null;
+        ListNode dummyNode = new ListNode(0);
         while(head!=null){
-            ListNode next = head.next;//先记录下一个节点
-            head.next=pre;//将当前节点插到最前方
-            pre = head;//将头节点向前移
-            head = next;//head接这循环
+            ListNode node = head.next;
+            ListNode temp = dummyNode.next;
+            dummyNode.next = head;
+            head.next = temp;
+            head = node;
         }
-        return pre;//返回头节点
+        return dummyNode.next;
     }
 }
 ```
@@ -69,16 +69,16 @@ class Solution {
 class Solution {
     public ListNode reverseList(ListNode head) {
         ListNode pre = null;
-
         return reverse(pre,head);
     }
     static ListNode reverse(ListNode pre,ListNode cur) {
         if(cur==null){
             return pre;
         }
-        ListNode next = cur.next;
-        cur.next = pre;
-        return reverse(cur,next);
+      // 1,2,3,4,5
+        ListNode next = cur.next;//得到1->next也就是2
+        cur.next = pre;//将1->2
+        return reverse(cur,next);// 继续递归将3—>2
     }
 }
 ```
