--- a/算法/刷题记录/2021-03-24__环形链表__ 填充节点的下个右侧节点.md
+++ b/算法/刷题记录/2021-03-24__环形链表__ 填充节点的下个右侧节点.md
@@ -133,8 +133,8 @@ class Solution {
 
 每次对以一层节点赋next值，就可以通过next访问到相邻的节点，实现跨节点相连。
 
-- 时间复杂度：O(N)*O*(*N*)，每个节点只访问一次。
-- 空间复杂度：O(1)*O*(1)，不需要存储额外的节点。
+- 时间复杂度：O(N)，每个节点只访问一次。
+- 空间复杂度：O(1)，不需要存储额外的节点。
 
 ```java
 class Solution {
