--- a/算法/刷题记录/2021-04-18__路径总和__重排链表.md
+++ b/算法/刷题记录/2021-04-18__路径总和__重排链表.md
@@ -47,7 +47,7 @@ class Solution {
 }
 ```
 
-使用线性表存储，，每次可以按下表取出对应节点
+使用线性表存储，每次可以按下表取出对应节点
 
 ```java
 class Solution {
@@ -80,35 +80,35 @@ class Solution {
 ```java
 class Solution {
     public void reorderList(ListNode head) {
-        if(head==null||head.next == null)return;
-        ListNode fast = head;
         ListNode slow = head;
-        while(fast!=null&&fast.next!=null){
-          //如果是偶数，能找到后半部分的第一个
-          //如果是奇数，能找到最中间的那一个
-            fast = fast.next.next;
+        ListNode fast = head;
+        //如果是偶数则找前一半的最后一位
+        while(fast.next!=null&&fast.next.next!=null){
             slow = slow.next;
+            fast = fast.next.next;
         }
-        ListNode needReverse = slow.next;
-        slow.next = null;
-        ListNode p = needReverse;
+        //无头结点的头插法
+        ListNode reverse = slow.next;
+        slow.next =null;
+        ListNode p = reverse;
         ListNode r = null;
         while(p!=null){
-            ListNode node = p.next;
+            ListNode temp = p.next;
             p.next = r;
-            r = p;
-            p = node;
+            r= p;
+            p = temp;
         }
+        //将两个链表进行拼接
         ListNode cur = head;
-      //将两个链表进行相连
-        while(cur!=null&&r!=null){
-            ListNode nextCur = cur.next;
-            ListNode nextr = r.next;
+        while(r!=null&&cur!=null){
+            ListNode curNext = cur.next;
+            ListNode rNext = r.next;
             cur.next = r;
-            r.next = nextCur;
-            cur = nextCur;
-            r = nextr;
+            r.next = curNext;
+            cur = curNext;
+            r = rNext;
         }
+        // return head;
     }
 }
 ```
