--- a/算法/刷题记录/2021-08-28__复杂链表的复制__岛屿的最大面积(DFS).md
+++ b/算法/刷题记录/2021-08-28__复杂链表的复制__岛屿的最大面积(DFS).md
@@ -67,8 +67,7 @@ class Solution {
         }
         return res;
     }
-    int dfs(int[][] grid,int i,int j ){
-        if(i<0||i>=grid.length||j<0||j>=grid[0].length||grid[i][j]==0)return 0;
+    int dfs(int[][] grid,int i,int j ){    if(i<0||i>=grid.length||j<0||j>=grid[0].length||grid[i][j]==0)return 0;
         grid[i][j]=0;
         int count = 0;
         count+=(1+dfs(grid,i-1,j)+dfs(grid,i+1,j)+dfs(grid,i,j-1)+dfs(grid,i,j+1));
