--- a/数据库/数据库（新）.md
+++ b/数据库/数据库（新）.md
@@ -19,6 +19,14 @@ DCL:数据控制语言，grant授权，revoke撤销权限
 
 #### 2.数据库索引
 
+几种索引实现方式：
+
+hash表：哈希表这种结构适用于只有等值查询的场景，没有范围查询
+
+数组：有序数组索引只适用于静态存储引擎，也就是不会改变的数据
+
+N叉搜索树：最常用
+
 1. 自增id还是UUID做主键
 
 https://segmentfault.com/a/1190000039415655
@@ -29,7 +37,7 @@ https://segmentfault.com/a/1190000039415655
 
 3. 索引分类
 
-   ```
+   ```java
    索引分类
    1.普通索引index :加速查找
    2.唯一索引
@@ -95,9 +103,45 @@ https://segmentfault.com/a/1190000039415655
 
 #### 事务
 
-事务的隔离，原子性，
+**看Mysql45讲的第三讲。**
 
+事务的四大特性：ACID;
 
+可能会出现的问题：脏读（dirty read）、不可重复读（non- repeatable read）、幻读（phantomread）
+
+SQL标准的事务隔离级别：读未提交（read uncommitted）、 读提交（read committed）、可重复读（repeatable read）和串行化（serializable ）
+
+1.  读未提交是指，一个事务还没提交时，它做的变更就能被别的事务看到。
+2.   读提交是指，一个事务提交之后，它做的变更才会被其他事务看到。
+3.   可重复读是指，一个事务执行过程中看到的数据，总是跟这个事务在启动时看到的数据是一 致的。当然在可重复读隔离级别下，未提交变更对其他事务也是不可见的。 
+4.  串行化，顾名思义是对于同一行记录，“写”会加“写锁”，“读”会加“读锁”。当出现读写锁冲突 的时候，后访问的事务必须等前一个事务执行完成，才能继续执行。
+
+##### 启动事务的方式
+
+1.  显式启动事务语句， begin 或 start transaction。配套的提交语句是commit，回滚语句是 rollback。 
+2.  set autocommit=0，这个命令会将这个线程的自动提交关掉。意味着如果你只执行一个 select语句，这个事务就启动了，而且并不会自动提交。这个事务持续存在直到你主动执行 commit 或 rollback 语句，或者断开连接。
+
+##### 长事务存在的风险
+
+如何寻找长事务： information_schema.INNODB_TRX 表中包含了当前innodb内部正在运行的事务信息，这个表中给出了事务的开始时间，我们可以稍加运算即可得到事务的运行时间。
+
+1.  会导致数据库里有很早的事务视图，所以这个事务提交之前，数据库里面它可能用到的回滚记录都必须保留，这就会导致大量占 用存储空间。
+2.  占用锁资源
+
+##### 如何避免长事务带来的风险
+
+首先，从应用开发端来看：
+
+1.  确认是否使用了set autocommit=0。这个确认工作可以在测试环境中开展，把MySQL的 general_log开起来，然后随便跑一个业务逻辑，通过general_log的日志来确认。一般框架 如果会设置这个值，也就会提供参数来控制行为，你的目标就是把它改成1。 	
+2.   确认是否有不必要的只读事务。有些框架会习惯不管什么语句先用begin/commit框起来。我 见过有些是业务并没有这个需要，但是也把好几个select语句放到了事务中。这种只读事务 可以去掉。 
+3.  业务连接数据库的时候，根据业务本身的预估，通过SETMAX_EXECUTION_TIME命令， 来控制每个语句执行的最长时间，避免单个语句意外执行太长时间。（为什么会意外？在后 续的文章中会提到这类案例） 
+
+其次，从数据库端来看：
+
+1.  监控 information_schema.Innodb_trx表，设置长事务阈值，超过就报警/或者kill；
+2.  Percona的pt-kill这个工具不错，推荐使用； 
+3.  在业务功能测试阶段要求输出所有的general_log，分析日志行为提前发现问题； 
+4.  4. 如果使用的是MySQL 5.6或者更新版本，把innodb_undo_tablespaces设置成2（或更大的 值）。如果真的出现大事务导致回滚段过大，这样设置后清理起来更方便。
 
 #### 日志
 
