--- a/算法/刷题记录/2021-04-02__笨阶乘__LRU缓存机制.md
+++ b/算法/刷题记录/2021-04-02__笨阶乘__LRU缓存机制.md
@@ -74,7 +74,7 @@ class Solution {
 更改数据也要O(1),双向链表的结构
 
 ```java
-
+使用hashmap保证get为o(1),双向链表保证put为o(1);
 public class LRUCache {
     class DLinkedNode {
         int key;
@@ -158,5 +158,35 @@ public class LRUCache {
         return res;
     }
 }
+```
+
+由于LinkedHashMap在hashMap的基础上保证了顺序，所以可以直接继承LinkedHashMap重写其removeEldestEntry方法来规定其顺序操作。
+
+在这里直接判断size是否大于给定容量即可
+
+```java
+class LRUCache extends LinkedHashMap<Integer, Integer>{
+    private int capacity;
+    
+    public LRUCache(int capacity) {
+        super(capacity, 0.75F, true);
+        this.capacity = capacity;
+    }
+
+    public int get(int key) {
+        return super.getOrDefault(key, -1);
+    }
+
+    // 这个可不写
+    public void put(int key, int value) {
+        super.put(key, value);
+    }
+
+    @Override
+    protected boolean removeEldestEntry(Map.Entry<Integer, Integer> eldest) {
+        return size() > capacity; 
+    }
+}
+
 ```
 
