--- a/算法/刷题记录/2021-04-08__ 找旋转排序数组最小值__搜索旋转排序数组.md
+++ b/算法/刷题记录/2021-04-08__ 找旋转排序数组最小值__搜索旋转排序数组.md
@@ -28,6 +28,9 @@ class Solution {
 
 如果中间的数小于最右边的数，则右半段是有序的，若中间数大于最右边数，则左半段是有序的，我们只要在有序的半段里用首尾两个数组来判断目标值是否在这一区域内，这样就可以确定保留哪半边了
 
+如果 [l, mid - 1] 是有序数组，且 target 的大小满足 [nums[l],nums[mid])，则我们应该将搜索范围缩小至 [l, mid - 1]，否则在 [mid + 1, r] 中寻找。
+		如果 [mid, r] 是有序数组，且 target 的大小满足(nums[mid+1],nums[r]]，则我们应该将搜索范围缩小至 [mid + 1, r]，否则在 [l, mid - 1] 中寻找。
+
 ```java
 class Solution {
     public int search(int[] nums, int target) {
@@ -44,7 +47,7 @@ class Solution {
                     low=mid+1;
                 }
             }else{
-                 if(nums[mid]<target&&target<=nums[high]){
+                if(nums[mid]<target&&target<=nums[high]){
                     low=mid+1;
                 }else{
                     high=mid-1;
