完善知识点

--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -1,5 +1,9 @@
 ###  中断，异常，硬中断，软中断
 
+同步中断：当指令执行时由 CPU 控制单元产生，称为异常（故障，陷进，终止）
+
+异步中断：其他硬件设备依照 CPU 时钟信号随机产生，称为中断
+
 ***<u>外中断：</u>***指来自CPU执行指令以处的事件的发生，如设备发出的I/O结束中断，表示设备输入/输出处理已经完成，希望处理机能够向设备发下一个输入/输出请求，
 
 同时让完成输入输出后的程序继续运行。**时钟中断**，表示一个固定的时间片已到，让处理机处理计时、启动定时运行的任务等。这一类中断通常是与当前程序运行无关的事件，即它们与当前处理机运行的程序无关。
@@ -12,11 +16,13 @@
 
 >  内中断中有一部分属于硬中断，即强迫中断中的硬件故障部分。外中断中外设的请求也会触发软中断。
 >
-> 硬中断的中断号是由中断控制器提供的（NMI 硬中断中断号系统指定为 02H）；软中断的中断号由指令直接给出，无需使用中断控制器。
+>  硬中断的中断号是由中断控制器提供的（NMI 硬中断中断号系统指定为 02H）；软中断的中断号由指令直接给出，无需使用中断控制器。
 >
-> 软中断是由程序调用发生的,而硬中断是由外设引发的
+>  软中断是由程序调用发生的,而硬中断是由外设引发的
 >
-> 硬件中断处理程序要确保它能快速地完成它的任务,这样程序执行时才不会等待较长时间。故而一般情况硬中断都要快与软中断结合使用。
+>  硬件中断处理程序要确保它能快速地完成它的任务,这样程序执行时才不会等待较长时间。故而一般情况硬中断都要快与软中断结合使用。
+
+Linux把中断处理分为两个部分，`上半部` 和 `下半部`，上半部注册中断程序，保存寄存器值，处理中断请求。下半部：由softirq（软中断）来负责，首先注册**softirq处理函数**，执行处理函数
 
 ##### **5.** 并发和并行的区别
 
@@ -25,6 +31,62 @@
 更好的支持和管理多道程序并发执行，
 
 独立功能的程序在一个数据集上运行的过程，分配资源和调度的基本单位
+
+### CPU上下文切换
+
+涉及哪些操作：保存寄存器值和PC计数器值，硬件中断
+
+*   进程上下文切换
+
+    >   ###### 系统调用：
+    >
+    >   Linux 按照特权级别将进程的运行空间划分为内核空间和用户空间，分别对应下图中 `Ring 0` 和 `Ring 3` 的 CPU 特权级别的 。
+    >
+    >   *   **内核空间**（`Ring 0`）拥有最高权限，可以直接访问所有资源
+    >   *   **用户空间**（`Ring 3`）只能访问受限资源，不能直接访问内存等硬件设备。它必须通过**系统调用**被**陷入（trapped）**内核中才能访问这些特权资源。
+    >
+    >   1.   需要先保存 CPU 寄存器中原来的用户态指令的位置。
+    >   2.   需要将 CPU 寄存器更新到内核态指令的新位置。跳转到内核态运行内核任务
+    >   3.   系统调用结束后，CPU 寄存器需要**恢复**原来保存的用户状态，继续执行用户任务
+    >
+    >   系统调用有<u>两次 CPU 上下文切换</u>，但是系统调用期间只有一个进程执行任务，只不过有些特权一定要内核态执行罢了
+    >
+    >   ###### 进程上下文切换
+    >
+    >   进程是由内核管理的，进程切换只能发生在内核态。因此，进程上下文不仅包括**虚拟内存**、**栈**和**全局变量**等用户空间资源，还包括**内核栈**和**寄存器**等内核空间的状态。所以**进程上下文切换**比**系统调用**要多出一步：在保存当前进程的内核状态和 CPU 寄存器之前，需要<u>保存进程的虚拟内存、栈等</u>；并加载下一个进程的内核状态
+    >
+    >   什么时候会发现进程上下文切换：
+    >
+    >   >   1.   时间片用完
+    >   >   2.   资源不足，会切换到其它进程，**进程是分配资源的基本单位**
+    >   >   3.   sleep主动挂起自己
+    >   >   4.   高优先级的进程运行
+    >   >   5.   硬件中断
+
+     
+
+*   线程上下文切换
+
+    >   线程是**任务调度**的基本单位，而进程是**资源获取**的基本单位。
+    >
+    >   内核中所谓的任务调度，实际的调度对象是线程；而进程只为线程提供虚拟内存和全局变量等资源，所以对于线程调度可以分为下面两种情况：
+    >
+    >   *   当一个进程只有一个线程时，可以认为一个进程等于一个线程
+    >   *   当一个进程有多个线程时，这些线程共享相同的资源，例如虚拟内存和全局变量。
+    >   *   此外，线程也有自己的私有数据，比如栈和寄存器，在上下文切换时也需要保存。
+    >
+    >   对此线程切换也有以下情况：
+    >
+    >   *   前后两个线程属于不同的进程。此时，由于资源不共享，切换过程与进程上下文切换相同。
+    >   *   其次，前后两个线程属于同一个进程。此时，由于虚拟内存是共享的，所以切换时虚拟内存的资源保持不变，只需要切换线程的私有数据、寄存器等未共享的数据。
+    >
+    >   同一个进程内的线程切换比切换多个进程消耗的资源要少
+
+*   中断上下文切换
+
+    >   中断上下文切换不涉及进程的用户态。因此，即使中断进程中断了处于用户态的进程，也不需要保存和恢复进程的虚拟内存、全局变量等用户态资源。
+    >
+    >   另外，和进程上下文切换一样，中断上下文切换也会消耗 CPU。过多的切换次数会消耗大量的 CPU 资源，甚至严重降低系统的整体性能。因此，当发现中断过多时，需要注意排查它是否会对您的系统造成严重的性能问题。
 
 ### 进程的通信（IPC）
 
@@ -84,7 +146,7 @@
 
 用来**跨网络与不同主机上的进程进行通信**，
 
-##### **8.** 为什么引入线程
+### 为什么引入线程
 
 减少程序并发执行所付出的时空开销，提高操作系统的并发性能，同一个进程中的线程切换只需要很少的
 
@@ -130,7 +192,7 @@
 
 https://blog.csdn.net/qq_26553393/article/details/122281044
 
-系统资源的竞争。进程顺序非法。 死锁产生的四个必要条件（**互斥条件**（一般不能破坏），**不可剥夺条件**（1.进程请求的资源一直不能满足，则释放手里的资源2.当进程需要的资源被其他线程所占有，可以由操作系统协助，将资源进行剥夺，实现起来复杂，也能造成之前的工作白费，降低系统吞吐量），**请求保持条件**（请求了一个资源，正在请求另外一个，没有满足就一直等待，可以一次将进程所需要的资源全部分配），循环等待条件（存在你等我，我等你的这种现象，可以采用顺序资源分配法，按资源编号递增的去申请资源））
+系统资源的竞争。进程顺序非法。 死锁产生的四个必要条件（**互斥条件**（一般不能破坏），**不可剥夺条件**（1.进程请求的资源一直不能满足，则释放手里的资源2.当进程需要的资源被其他线程所占有，可以由操作系统协助，将资源进行剥夺，实现起来复杂，也能造成之前的工作白费，降低系统吞吐量），**请求保持条件**（请求了一个资源，正在请求另外一个，没有满足就一直等待，可以一次将进程所需要的资源全部分配），**循环等待条件**（存在你等我，我等你的这种现象，可以采用顺序资源分配法，按资源编号递增的去申请资源））
 
 写出线程死锁的代码：
 
@@ -153,7 +215,7 @@ public class DeadLockDemo {
                 }
             }
         }, "线程 1").start();
-
+      
         new Thread(() -> {
             synchronized (resource2) {
                 System.out.println(Thread.currentThread() + "get resource2");
@@ -171,8 +233,6 @@ public class DeadLockDemo {
     }
 }
 ```
-
-
 
 ### 死锁的处理策略
 
@@ -217,21 +277,56 @@ public class DeadLockDemo {
 
 ### 虚拟内存
 
-##### **25.**为什么要引入虚拟内存
+为什么要引入虚拟内存
 
  多道程序并发执行，不仅使进程之间共享了存储器，还共享了主存。然而随着对处理器需求的，进程的执行速度会以某种平滑的方式慢下来。但是如果同时运行太多的进程，那就需要很多的内存。当一个程序没有足够的内存空间死件件下。应尝试一些其他可行的方法在逻辑上来扩充内存。
 
-##### **26.** 虚拟内存怎么做到的
-
 虚拟内存使用的外存上的空间来扩充内存空间。尽量的换入的的内存容量。所以虚拟内存技术调换页面时需要频繁的访问外存，会导致平均访问时间的下降。
-
-##### **27.** 虚拟内存大小由什么决
 
 虚拟内存大小<=内存+外存
 
 虚拟内存<=计算机地址位数最大容量
 
-##### 虚拟内存如何映射为物理内存
+**内存分段和内存分页**
+
+##### 内存分段：
+
+>   **内存碎片**，**内存交换的效率低**
+
+##### 内存分页
+
+**分页是把整个虚拟和物理内存空间切成一段段固定尺寸的大小**。这样一个连续并且尺寸固定的内存空间，我们叫**页**（*Page*）。在 Linux 下，每一页的大小为 `4KB`。
+
+页表实际上存储在 CPU 的**内存管理单元** （*MMU*） 中，于是 CPU 就可以直接通过 MMU，找出要实际要访问的物理内存地址。
+
+而当进程访问的虚拟地址在页表中查不到时，系统会产生一个**缺页异常**，进入系统内核空间分配物理内存、更新进程页表，最后再返回用户空间，恢复进程的运行。
+
+如果内存空间不够，操作系统会把其他正在运行的进程中的「最近没被使用」的内存页面给释放掉，也就是暂时写在硬盘上，称为**换出**（*Swap Out*）。一旦需要的时候，再加载进来，称为**换入**（*Swap In*）
+
+>   在分页机制下，虚拟地址分为两部分，**页号**和**页内偏移**。页号作为页表的索引，**页表**包含物理页每页所在**物理内存的基地址**，这个基地址与页内偏移的组合就形成了物理内存地址
+>
+>   缺点：页表可能会非常大，并且非常浪费内存，所以就需要**多级页表**，一级页表中存储页号和二级页表地址
+
+##### 段页式内存管理
+
+段页式内存管理实现的方式：
+
+*   先将程序划分为多个有逻辑意义的段，也就是前面提到的分段机制；
+*   接着再把每个段划分为多个页，也就是对分段划分出来的连续空间，再划分固定大小的页；
+
+这样，地址结构就由**段号、段内页号和页内位移**三部分组成。
+
+段页式地址变换中要得到物理地址须经过三次内存访问：
+
+*   第一次访问段表，得到页表起始地址；
+*   第二次访问页表，得到物理页号；
+*   第三次将物理页号与页内位移组合，得到物理地址。
+
+##### Linux 内存管理
+
+**Linux 内存主要采用的是页式内存管理，但同时也不可避免地涉及了段机制**
+
+### 文件共享
 
 需要：
 
@@ -273,7 +368,7 @@ DMA传输批量数据中断控制方式以字节为单位。
 
 不同点：①从功能上看，页是信息的物理单位，分页是为实现离散分配方式，以消除内存的外零头，提供内存利用率，是为了满足系统管理的需要；而段是信息的逻辑单位，它含有一组意义相对完整的信息，是为了满足用户的需要。②页的大小是由系统确定且固定不变的，而段的长度不固定，取决于用户编写的程序。④分页的作业地址空间是一维的，分段的作业地址空间是二维的。
 
-##### ***\*34\*******\*.有哪些常用文件分配方式?分别有什么优缺点?\****
+##### .有哪些常用文件分配方式?分别有什么优缺点?
 
 答：文件分配对应于文件的物理结构，是指如何为文件分配磁盘块。常用的磁盘空间分配方
 
@@ -287,7 +382,7 @@ DMA传输批量数据中断控制方式以字节为单位。
 
 访问：易于文件的增删。缺点：索引表增加了存储空间的开销：索引表的查找策略对文件系统效率影响较大。
 
-##### ***\*35\*******\*.引入缓冲区的目的是什么?\****
+##### .引入缓冲区的目的是什么?\*
 
 (1)缓和CPU与I/0设备间速度不匹配的矛盾。
 
@@ -301,7 +396,7 @@ DMA传输批量数据中断控制方式以字节为单位。
 
 临界区，互斥对象，信号量：计算机内部用来控制一个资源访问一种机制，通过PV操作来完成的
 
-##### **37.** ***\*IO控制方式\****
+##### **37.** IO控制方式
 
 程序直接控制：
 
@@ -317,7 +412,7 @@ PU，而DMA控制方式则是在所要求传送的一批数据全部传送结束
 
 通道方式：IO通道是指专门负责输入输出的处理机：IO通道方式是DMA方式的发展，它可以进一步减少CPU的干预，即把对一个数据块的读（或写）为单位的干预，减少为对一组数据块的读（或写）及有关的控制和管理为单位的干预。同时，又可以实现CPU、通道和IO设备三者的并行操作，从而更有效地提高整个系统的资源利用率。
 
-##### ***\*38.DMA控制方式与中断控制方式\****
+##### 38.DMA控制方式与中断控制方式
 
 1）中断控制方式在每个数据传送完成后中断CPU，而DMA控制方式则是在所要求传送的一批数据全部传送结束时中断CPU。
 
@@ -353,7 +448,7 @@ https://www.cnblogs.com/xiaolincoding/p/13550711.html
 
 键盘的中断处理程序是在**键盘驱动程序**初始化时注册的，那键盘**中断处理函数**的功能就是从键盘控制器的寄存器的缓冲区读取扫描码，再根据扫描码找到用户在键盘输入的字符，如果输入的字符是显示字符，那就会把扫描码翻译成对应显示字符的 ASCII 码，比如用户在键盘输入的是字母 A，是显示字符，于是就会把扫描码翻译成 A 字符的 ASCII 码。
 
-得到了显示字符的 ASCII 码后，就会把 ASCII 码放到「读缓冲区队列」，接下来就是要把显示字符显示屏幕了，显示设备的驱动程序会定时从「读缓冲区队列」读取数据放到「写缓冲区队列」，最后把「写缓冲区队列」的数据一个一个写入到显示设备的控制器的寄存器中的数据缓冲区，最后将这些数据显示在屏幕里。显示出结果后，**恢复被中断进程的上下文**。
+得到了显示字符的 ASCII 码后，就会把 ASCII 码放到「读缓冲区队列」，接下来就是要把显示字符显示屏幕了，**显示设备的驱动程序**会定时从「读缓冲区队列」读取数据放到「写缓冲区队列」，最后把「写缓冲区队列」的数据一个一个写入到显示设备的控制器的寄存器中的数据缓冲区，最后将这些数据显示在屏幕里。显示出结果后，**恢复被中断进程的上下文**。
 
 ### CPU执行程序过程
 
