--- a/算法/常见题目总结归纳.md
+++ b/算法/常见题目总结归纳.md
@@ -1,65 +1,77 @@
 图
 --
 
-1.   图的遍历：BFS（）,DFS（329. 矩阵中的最长递增路径）
+##### 图的遍历：
 
-2.   图--三类
-     常规的node和edge的图, 建adj matrix然后遍历  (690. Employee Importance)
-     把矩阵看成图, 4周neighbor相连 （0-1 Islands系列, 79. Word Search, 417. Pacific Atlantic Water Flow）
-     把data(state)看成node, 把操作operation看成edge (127. Word Ladder, 1345. Jump Game IV) , 这种思路很多时候就变成了动态规划
+BFS（）,DFS（329. 矩阵中的最长递增路径）
 
-3.   拓扑排序（leetcode207，）
+##### 图--三类
 
-     ```java
-     //1.模板
-     class Solution {
-         public boolean canFinish(int numCourses, int[][] prerequisites) {
-             int[] indegrees = new int[numCourses];//记录入度
-             List<List<Integer>> adjacency =new ArrayList<>();//构架图的数据结构
-             Queue<Integer> queue = new LinkedList<>();//存放入度为0的节点
-             for(int i=0;i<numCourses;i++){
-                 adjacency.add(new ArrayList<>());
-             }
-             for(int[] cp:prerequisites){
-                 indegrees[cp[0]]++;
-                 adjacency.get(cp[1]).add(cp[0]);
-             }
-             for(int i=0;i<numCourses;i++){
-                 if(indegrees[i]==0)queue.add(i);
-             }
-             while(!queue.isEmpty()){
-                 int pre = queue.poll();
-                 numCourses--;
-                 for(int cur:adjacency.get(pre)){
-                     if(--indegrees[cur]==0)queue.add(cur);
-                 }
-             }
-         return numCourses==0;
-         }
-     }
-     //2.打印出具体的路径，使用int类型数据记录id
-     ```
+常规的node和edge的图, 建adj matrix然后遍历  (690. Employee Importance)
+把矩阵看成图, 4周neighbor相连 （0-1 Islands系列, 79. Word Search, 417. Pacific Atlantic Water Flow）
+把data(state)看成node, 把操作operation看成edge (127. Word Ladder, 1345. Jump Game IV) , 这种思路很多时候就变成了动态规划
 
-4.   并查集
+##### 拓扑排序（leetcode207，）
 
-     
+```java
+//1.模板
+class Solution {
+    public boolean canFinish(int numCourses, int[][] prerequisites) {
+        int[] indegrees = new int[numCourses];//记录入度
+        List<List<Integer>> adjacency =new ArrayList<>();//构架图的数据结构
+        Queue<Integer> queue = new LinkedList<>();//存放入度为0的节点
+        for(int i=0;i<numCourses;i++){
+            adjacency.add(new ArrayList<>());
+        }
+        for(int[] cp:prerequisites){
+            indegrees[cp[0]]++;
+            adjacency.get(cp[1]).add(cp[0]);
+        }
+        for(int i=0;i<numCourses;i++){
+            if(indegrees[i]==0)queue.add(i);
+        }
+        while(!queue.isEmpty()){
+            int pre = queue.poll();
+            numCourses--;
+            for(int cur:adjacency.get(pre)){
+                if(--indegrees[cur]==0)queue.add(cur);
+            }
+        }
+    return numCourses==0;
+    }
+}
+//2.打印出具体的路径，使用int类型数据记录id
+```
 
-5.   最短(长)路径
+##### 并查集
+
+
+
+##### 最短(长)路径
 
 树
 --
 
-1.   树的遍历：前中后序递归和迭代两种
-2.   树的递归，前中后序变体
-3.   Binary Search Tree
-4.   树的编码和解码
+##### 树的遍历：
+
+前中后序递归和迭代两种
+
+##### 树的递归
+
+前中后序变体
+
+##### Binary Search Tree
+
+##### 树的编码和解码
+
+ 297(二叉树的序列化与反序列化)
 
 动态规划
 --------
 
-常见思路：
+##### **背包问题：**
 
-##### 经典DP题目
+硬币零钱系列 (518)
 
 LIS: 300. Longest Increasing Subsequence O(nlogn)  (2D version: 354. Russian Doll Envelopes)
 LCS: 1143. Longest Common Subsequence
@@ -68,7 +80,7 @@ Longest Substring Without Repeating Characters
 Palindrome problems: 647. Palindromic Substrings, 5. Longest Palindromic Substring
 Prefix sum/max/min 相关： 42. Trapping Rain Water, 1423. Maximum Points You Can Obtain from Cards， Range Sum Query - Immutable, 304. Range Sum Query 2D - Immutable
 Word Break 系列
-硬币零钱系列 Coin Change
+
 买股票系列 Best Time to Buy and Sell Stock
 跳跃游戏系列 Jump games
 抢劫系列 House Robber
@@ -83,11 +95,20 @@ Unique Paths 系列
 堆 Heap, 栈 Stack, 队 Queue
 ---------------------------
 
-##### 栈 Stack
+### 栈 Stack
 
-常规题
+##### **单调栈：**
+
+316,321,402,1081(移掉K位数字最大/最小)，739（每日温度）
+
+##### **计算器：**
+
+（使用栈计算表达式）224
+
+
+
 946 Validate Stack Sequences
-Asteroid Collision
+Asteroid Collision行星碰撞
 括号题 ..
 Valid Parentheses, Remove Invalid Parentheses
 Basic Calculator 系列
@@ -123,6 +144,10 @@ Moving Average from Data Stream
  排序 Sort.
 -----------
 
+##### **归并排序：**
+
+计算数组的小和，剑指offer51逆序对，
+
 搜索和查询 Search and Query 
 ----------------------------
 
@@ -130,3 +155,8 @@ Moving Average from Data Stream
 
 数组和字符串相关
 ----------------
+
+##### **滑动窗口：**
+
+<u>209</u>（长度最小的子数组）
+
