--- a/逻辑题/逻辑题.md
+++ b/逻辑题/逻辑题.md
@@ -52,4 +52,32 @@
 >
 > 此时马上点燃A的另一头，从这个时间开始，到A烧完，就正好过了15分钟。
 
-##### 5.32个球，重量都不一样，只有一个天平，需要多少次才能找到最重的？需要多少次才能找到第二重的？
+##### 5. 32个球，重量都不一样，只有一个天平，需要多少次才能找到最重的？需要多少次才能找到第二重的？作者：代码不规范，测试两行泪
+
+https://www.nowcoder.com/discuss/262595?source_id=profile_create_nctrack&channel=-1
+
+1.赛马找最快<[腾讯]()高频> 
+
+ 2.砝码称轻重 
+
+ 3.药瓶毒白鼠<[腾讯]()> 
+
+ 4.绳子两头烧 
+
+ 5.犯人猜颜色 
+
+ 6.猴子搬香蕉 
+
+ 7.高楼扔鸡蛋<谷歌> 
+
+ 8.轮流拿石子<头条> 
+
+  9.蚂蚁走树枝 
+
+ 10.海盗分金币<不常见> 
+
+ 11.三个火枪手 
+
+   12.囚犯拿豆子  
+
+   13.学生猜生日<笔试高频>
